add_subdirectory(net_udp)
add_subdirectory(net_rtc)
add_subdirectory(net_ws)
add_subdirectory(net_relay)
add_subdirectory(media_recorder)
add_subdirectory(obj_detector)
add_subdirectory(ffmpeg_encoder)
add_subdirectory(amf_encoder)
add_subdirectory(frame_debugger)
add_subdirectory(nvenc_encoder)
add_subdirectory(dda_capture)
add_subdirectory(frame_resizer)
add_subdirectory(mock_video_stream)
add_subdirectory(was_audio_capture)
add_subdirectory(opus_encoder)
add_subdirectory(file_transfer)
add_subdirectory(clipboard)
add_subdirectory(gdi_capture)
add_subdirectory(frame_carrier)
add_subdirectory(tc_vr_plugin)
add_subdirectory(joystick)